playlist is independent of the os, audio informations will be read by ID3 library, totem informs about playing file